2000-10-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* autogen.sh: Don't run configure.

	* configure.in (SPECIAL_MATH_LIB): Delete code related to this var.
	* Makeconf.in: Ditto.
	(BLAS_LIBS, LIBS): Substitute here.
	(do-subst-config-vals): Put BLAS_LIBS in oct-conf.h.

2000-07-20  Joao Cardoso  <jcardoso@inescn.pt>

	* configure.in: (LD_CXX): Define and substitute.
	For sco3.2v5 systems, set SONAME_FLAGS and RLD_FLAG.
	* Makeconf.in (LD_CXX): Allow substitution.

2000-07-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (DISTSUBDIRS): Define in terms of $(ALL_SUBDIRS).

2000-07-17  Joao Cardoso  <jcardoso@inescn.pt>

	* configure.in (LIBGLOB): Set to be the two object files in the
	glob directory instead of libglob.a.

2000-07-05  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* Use BLAS_LIBS to save the names of BLAS libraries instead of
	adding them to LIBS, then substitute BLAS_LIBS.

2000-06-30  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* configure.in: Support for --with-fastblas (ATLAS).

2000-06-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for long long data type.

2000-06-29  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* acconfig.h (HAVE_HDF5): Add undef.
	* configure.in: Handle --with-hdf5.

2000-06-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave-bug.in: Substitute correct values for config_opts,
	MACHINE, and CXXFLAGS.

2000-06-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (GPERF): Allow substitution.

2000-06-05  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_PROG_GPERF): New macro.
	* configure.in: Use it.  Print warning at end if gperf is missing.

2000-04-20  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Try moving output file first.  But comment these
	lines and let people who have trouble enable them.

2000-04-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Remove output file before linking.
